Avoid calling PlaceBlock and unsetting dirty bits that we still need when an ancestor is going to reflow for clearance.  (Bug 476357)  r+sr=roc